5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1758_1576.log
== SUBMITION (2019-05-23 11:27:56) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.207139
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:58) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.157399
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:58) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.193396
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:59) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.415896
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:59) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.239822
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:59) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.628491
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1576/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:59) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		soma = soma + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.67417
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:11) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.202682
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:14) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.234974
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:15) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.268782
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:15) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.320464
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:15) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.579415
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:16) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.857693
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:16) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.678287
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 10
    elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:16) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i<size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
   elif(e[i] == 11 and b[i] == 11) or (e[i] == 11 and b[i] == 22) or (e[i] == 22 and b[i] == 33):
		somab = somab + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.612612
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1576/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:09:47) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i < size(e) and size(e) == size(b)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
   elif(e[i] == 11 and b[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
		msg = "EMPATE"
	i = i + 1
	print(size(e))
	
	if(somae>somab):
		print("EUSAPIA")
	elif(somab>somae):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.271076
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 11
    elif(e[i] == 11 and b[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:11:59) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i < size(e) and size(e) == size(b)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
   elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
	i = i + 1
print(i)
	
if(somae>somab):
	print("EUSAPIA")
elif(somab>somae):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.297093
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 11
    elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:12:02) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i < size(e) and size(e) == size(b)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
   elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
	i = i + 1
print(i)
	
if(somae>somab):
	print("EUSAPIA")
elif(somab>somae):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.123951
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 11
    elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:12:06) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i < size(e) and size(e) == size(b)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
   elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
	i = i + 1
print(i)
	
if(somae>somab):
	print("EUSAPIA")
elif(somab>somae):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.117305
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 11
    elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:12:10) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i < size(e) and size(e) == size(b)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
   elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
	i = i + 1
print(i)
	
if(somae>somab):
	print("EUSAPIA")
elif(somab>somae):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.167973
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 11
    elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 03:12:12) 
-- CODE:
from numpy import*
e = array(eval(input("vetor:")))
b = array(eval(input("vetor:")))
i = 0
somae = 0
somab = 0
while(i < size(e) and size(e) == size(b)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		somae = somae + 1
		i = i + 1
   elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
		somab = somab + 1
		i = i + 1
	else:
	i = i + 1
print(i)
	
if(somae>somab):
	print("EUSAPIA")
elif(somab>somae):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.126976
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 11
    elif(b[i] == 11 and e[i] == 33) or (b[i] == 11 and e[i] == 22) or (b[i] == 22 and e[i] == 33):
                                                                                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
